--- a/ai_ml_assignment.ipynb
+++ b/ai_ml_assignment.ipynb
@@ -49,10 +49,10 @@
       ],
       "metadata": {
         "id": "20stvY3zrhHi",
-        "outputId": "5e14ce1b-c320-4f84-c59f-3f99e57366db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5e14ce1b-c320-4f84-c59f-3f99e57366db"
       },
       "execution_count": 1,
       "outputs": [
@@ -98,10 +98,10 @@
       ],
       "metadata": {
         "id": "HJPn3GGIrqj8",
-        "outputId": "732dbe90-9229-4a59-febe-7238adeab269",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "732dbe90-9229-4a59-febe-7238adeab269"
       },
       "execution_count": 2,
       "outputs": [
@@ -133,11 +133,11 @@
         "print(df.head())"
       ],
       "metadata": {
-        "id": "5nrjGGsnnSfQ",
-        "outputId": "96709851-73c0-43df-f8ba-c30e08649777",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5nrjGGsnnSfQ",
+        "outputId": "96709851-73c0-43df-f8ba-c30e08649777"
       },
       "execution_count": 7,
       "outputs": [
@@ -169,6 +169,92 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.rename(columns={'No-show':'No_show'}, inplace=True)"
+      ],
+      "metadata": {
+        "id": "-woP501inzvY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['ScheduledDay'] = pd.to_datetime(df['ScheduledDay'])\n",
+        "df['AppointmentDay'] = pd.to_datetime(df['AppointmentDay'])"
+      ],
+      "metadata": {
+        "id": "FIfJG_Linzx9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jW1DkQ9nnz0K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "UM2Kflptnz2I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8nmtl0zAnz6F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JG7XPpWVnz9j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "WPMuOIvJnz_g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jkThmRc_n0BU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9Vgb1uR2n0GR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
