removed impossible ages and converted targets

--- a/ai_ml_assignment.ipynb
+++ b/ai_ml_assignment.ipynb
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "-woP501inzvY"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -190,34 +190,41 @@
       "metadata": {
         "id": "FIfJG_Linzx9"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df['lead_time'] = (df['AppointmentDay'] - df['ScheduledDay']).dt.days\n",
+        "df['appointment_dayofweek'] = df['AppointmentDay'].dt.dayofweek"
+      ],
       "metadata": {
         "id": "jW1DkQ9nnz0K"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df = df[df['Age'] >= 0]"
+      ],
       "metadata": {
         "id": "UM2Kflptnz2I"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df['No_show'] = df['No_show'].map({'Yes':1, 'No':0})"
+      ],
       "metadata": {
         "id": "8nmtl0zAnz6F"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
