--- a/ai_ml_assignment.ipynb
+++ b/ai_ml_assignment.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "aHRdtriVm0gK"
       },
@@ -52,9 +52,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e14ce1b-c320-4f84-c59f-3f99e57366db"
+        "outputId": "f4c1228f-ef51-4072-f089-3a4f3f95756d"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +68,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 2.40M/2.40M [00:00<00:00, 2.67MB/s]"
+            "100%|██████████| 2.40M/2.40M [00:00<00:00, 113MB/s]"
           ]
         },
         {
@@ -101,9 +101,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "732dbe90-9229-4a59-febe-7238adeab269"
+        "outputId": "b88b5097-2dc1-46c9-abe9-d613e155545c"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "PfzpsXzknKy_"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -137,9 +137,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5nrjGGsnnSfQ",
-        "outputId": "96709851-73c0-43df-f8ba-c30e08649777"
+        "outputId": "9aea423f-de6b-40d6-95a5-ae205fea2340"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "-woP501inzvY"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "FIfJG_Linzx9"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "jW1DkQ9nnz0K"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "UM2Kflptnz2I"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "8nmtl0zAnz6F"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -245,9 +245,9 @@
           "height": 224
         },
         "id": "JG7XPpWVnz9j",
-        "outputId": "1242dac0-285a-4688-ab9a-16df7d5e3a02"
+        "outputId": "8d9e8763-907b-40ab-aee4-8de8c292b76b"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-83f0c72b-a2ee-4bc5-9644-fb16dd70b15f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f552dca4-c998-4baa-939c-953017da3e04\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -385,7 +385,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-83f0c72b-a2ee-4bc5-9644-fb16dd70b15f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f552dca4-c998-4baa-939c-953017da3e04')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -437,12 +437,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-83f0c72b-a2ee-4bc5-9644-fb16dd70b15f button.colab-df-convert');\n",
+              "        document.querySelector('#df-f552dca4-c998-4baa-939c-953017da3e04 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-83f0c72b-a2ee-4bc5-9644-fb16dd70b15f');\n",
+              "        const element = document.querySelector('#df-f552dca4-c998-4baa-939c-953017da3e04');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -471,18 +471,33 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "baseline = df['No_show'].mean()\n",
+        "print(\"Baseline No-show rate:\", baseline)"
+      ],
       "metadata": {
-        "id": "WPMuOIvJnz_g"
+        "id": "WPMuOIvJnz_g",
+        "outputId": "abd2c8a7-75a8-4c1b-9bee-8e34caba8c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Baseline No-show rate: 0.20193438647919945\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
