Testing for Logistic Regression

--- a/ai_ml_assignment.ipynb
+++ b/ai_ml_assignment.ipynb
@@ -626,12 +626,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Testing for Logistic Regression\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "log_model = LogisticRegression(max_iter=1000)\n",
+        "log_model.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "log_probs = log_model.predict_proba(X_test_scaled)[:,1]\n",
+        "log_preds = log_model.predict(X_test_scaled)\n",
+        "\n",
+        "print(\"Logistic ROC-AUC:\", roc_auc_score(y_test, log_probs))\n",
+        "print(classification_report(y_test, log_preds))\n",
+        "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, log_preds))"
+      ],
       "metadata": {
-        "id": "mlfW0AsnrNNZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mlfW0AsnrNNZ",
+        "outputId": "165d44f5-f0e4-4e48-dfb0-f991d7b9d181"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Logistic ROC-AUC: 0.7060004326389575\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.80      1.00      0.89     17642\n",
+            "           1       0.34      0.01      0.02      4464\n",
+            "\n",
+            "    accuracy                           0.80     22106\n",
+            "   macro avg       0.57      0.50      0.45     22106\n",
+            "weighted avg       0.71      0.80      0.71     22106\n",
+            "\n",
+            "Confusion Matrix:\n",
+            " [[17557    85]\n",
+            " [ 4420    44]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
